replace `@astrojs/tailwind` with `@tailwindcss/vite`

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esbuild": "^0.25.10",
     "postcss-nesting": "^13.0.2",
     "prettier": "^3.6.2",
+    "@tailwindcss/vite": "^4.1.5",
     "prettier-plugin-astro": "^0.14.1"
   },
   "dependencies": {
