--- a/.github/workflows/check-tags-without-descriptions.yml
+++ b/.github/workflows/check-tags-without-descriptions.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Search for missing SEO tags in the German Tech Podcast file
         run: make update-missing-tag-descriptions-german-tech-podcast
 
+      - name: Search for missing SEO genres in the awesome-software-engineering-games file
+        run: make update-missing-genre-descriptions-awesome-software-engineering-games
+
       # Commit results back to repository
       - uses: stefanzweifel/git-auto-commit-action@v6
         env:
