--- a/netlify.toml
+++ b/netlify.toml
@@ -2049,6 +2049,7 @@ force = true
 [[redirects]]
 from = "partner*"
 to = "/podcast/partners"
+status = 301
 
 [[redirects]]
 from = "/episodes/147"
@@ -3179,10 +3180,9 @@ force = true
 
 [[headers]]
 for = "/deutsche-tech-podcasts/podcasts.opml"
-
-[headers.values]
-Content-Type = "text/x-opml"
-Content-Disposition = "attachment"
+  [headers.headers]
+  Content-Type = "text/x-opml"
+  Content-Disposition = "attachment"
 
 [build]
 publish = "dist/"
