--- a/.github/workflows/sync-awesome-software-engineering-games.yml
+++ b/.github/workflows/sync-awesome-software-engineering-games.yml
@@ -6,22 +6,24 @@ on:
     types: [game-list-update]
 
 jobs:
-  publishing:
+  sync-awesome-software-engineering-games:
     name: Sync awesome-software-engineering-games from external repository
     runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v6.0.1
-      - uses: actions/setup-python@v6.1.0
+      - uses: actions/setup-go@v6
         with:
-          python-version-file: 'scripts/.python-version'
-          cache: 'pip'
+          go-version: "1.25"
 
-      - name: Install python dependencies
-        run: make init-python
+      - name: Build
+        run: make build
 
-      - name: Run make update-awesome-software-engineering-games
-        run: make update-awesome-software-engineering-games
+      # Updates the Awesome Software Engineering Games data
+      # from https://github.com/EngineeringKiosk/awesome-software-engineering-games
+      - name: website-admin sync awesome-software-engineering-games
+        run: |
+          ./website-admin sync awesome-software-engineering-games
 
       # Commit results back to repository
       - uses: stefanzweifel/git-auto-commit-action@v7.1.0
