--- a/.github/workflows/sync-german-tech-podcasts.yml
+++ b/.github/workflows/sync-german-tech-podcasts.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6.0.1
-      - uses: actions/setup-python@v6.1.0
+      - uses: actions/setup-go@v5
         with:
-          python-version-file: 'scripts/.python-version'
-          cache: 'pip'
+          go-version-file: 'website-admin/go.mod'
+          cache-dependency-path: 'website-admin/go.sum'
 
-      - name: Install python dependencies
-        run: make init-python
+      - name: Build website-admin
+        run: make build
+        working-directory: website-admin
 
       - name: Run make update-german-tech-podcasts
         run: make update-german-tech-podcasts
