Makefile: New command `code-coverage`

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ venv
 
 # Application
 website-admin/website-admin
+
+# AI
+.claude/
+
+# Code Coverage
+website-admin/coverage.out
+website-admin/coverage.html
