--- a/.github/workflows/check-tags-without-descriptions.yml
+++ b/.github/workflows/check-tags-without-descriptions.yml
@@ -42,8 +42,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: Add new tags that need SEO descriptions into tag data file
+          commit_message: "chore: Add new tags that need SEO descriptions into tag data file"
           branch: main
-          commit_user_name: Tag SEO description workflow bot
-          commit_user_email: stehtisch@engineeringkiosk.dev
-          commit_author: Tag SEO description workflow bot <stehtisch@engineeringkiosk.dev>
+          commit_user_name: "GitHub Actions Bot"
+          commit_user_email: "actions@github.com"
+          commit_author: "GitHub Actions Bot <actions@github.com>"
