--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -30,8 +30,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: Code formatting via `make prettier`
+          commit_message: "chore: Code formatting via `make prettier`"
           branch: main
-          commit_user_name: Code formatting workflow bot
-          commit_user_email: stehtisch@engineeringkiosk.dev
-          commit_author: Code formatting workflow bot <stehtisch@engineeringkiosk.dev>
+          commit_user_name: "GitHub Actions Bot"
+          commit_user_email: "actions@github.com"
+          commit_author: "GitHub Actions Bot <actions@github.com>"
