--- a/netlify.toml
+++ b/netlify.toml
@@ -3322,7 +3322,7 @@
   status = 301
   force = true
 
-[[redirects]
+[[redirects]]
   from = "/fosdem"
   to = "https://cloud.inlupus.at/apps/polls/s/vwTecUlW"
   status = 302 
