Prettier: Ignore src/content/awesome-software-engineering-games/*.json

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,7 @@ src/data/*.json
 
 # Content data
 src/content/germantechpodcasts/*.json
+src/content/awesome-software-engineering-games/*.json
 
 # Transcripts
 src/data/transcripts/*.json
