feat: Add Frachtwerk partner section and redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -3317,6 +3317,12 @@
   force = true
 
 [[redirects]]
+  from = "/frachtwerk"
+  to = "https://jump.engineeringkiosk.dev/frachtwerk"
+  status = 302
+  force = true
+
+[[redirects]]
   from = "/episodes/250"
   to = "/podcast/episode/250-tech-leadership-skalieren-was-ein-cto-wirklich-tun-muss-mit-philipp-deutscher?pkn=shortlink"
   status = 301
